--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -49,7 +49,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <a href="/catalog" id="topword" style="color:#28dd89; margin-left: 3vw;margin-top: 2vw; font-size:25px; font-weight: bold;" class="font-weight-bold">
+            <a href="/" id="topword" style="color:#28dd89; margin-left: 3vw;margin-top: 2vw; font-size:25px; font-weight: bold;" class="font-weight-bold">
                 Fin Bert    
             </a>
         </div>
