--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -715,8 +715,8 @@
         //////////////////////////////////
 
         $(".type1").css('backgroundColor', "#dfface")
-        $(".senA.type2").css('opacity', 0.5)
-        $(".senA.type3").css('opacity', 0.5)
+        $(".senA").css('opacity', 0.5)
+        $(".senA").css('opacity', 0.5)
         $(".type3").css('backgroundColor', "#f3e7ff")
         $(".type2").css('backgroundColor', "#ffbe40")
         
