--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -97,6 +97,9 @@
         <!--end selectrow-->
         <div class="row" id="companyname_typebutton">
             <div id="companyname" style="font-size:50px"></div>
+            
+        </div>
+        <div class="row" id="typebutoutline">
             <div id="typebutton" >
                 
                 
@@ -130,14 +133,12 @@
                 -->
                 
             </div>
-            
-            
         </div>
-        
 
         <div class="row" id="report_outline">
             <div class="row" id="reportrow">
                 <div class="col-md" id="parent_leftreport">
+                    
                     <div id="reportyear_curr"></div>
                     <div class="row" id="itemlist_leftreport">
                         
@@ -157,6 +158,7 @@
                     
                 </div>
                 <div class="col-md" id="parent_rightreport">
+                    
                     <div id="reportyear_last"></div>
                     <div class="row" id="itemlist_rightreport">
                         
@@ -255,7 +257,7 @@
         companydic = {"1469317" : {name:"company1"},
                     "1468174" : {name:"company2"},
                     "1467373" : {name:"company3"},
-                    "1001250": {name:"company4"},
+                    "1001250": {name:"Estee Lauder Companies Inc"},
                     "1442145": {name:"company5"}}
 
         var vm1 = new Vue({
