--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -5,10 +5,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+{% load static %}
 <head>
-    <title>Financial Dataset for Researchers</title>
-    <link rel='icon' href='https://www.iconninja.com/files/303/190/562/business-ratings-icon.png' type="image/png">
+    <title>FISH</title>
+    <link rel='icon' href="{% static 'pic&gif/fish2.png' %}" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <link rel="stylesheet" href="../static/css/index.css">
@@ -28,10 +28,10 @@
                 <div class="row" style="margin-top:30vh; ">
                     <h1 id="finbert">FISH</h1>
                 </div>
-                <div id="introduction" class="row" style="margin-top:3vh; font-family: Arial, Helvetica, sans-serif;">
+                <div id="introduction" class="row" style="font-family: Arial, Helvetica, sans-serif;">
                     <p>Financial Interactive System for Signal Highlighting</p>
                 </div>    
-                <div class="row" style="margin-top:8vh;">
+                <div class="row" style="margin-top:20px;">
                     
                     <form role="form" name="myform" method="POST" enctype="multipart/form-data" action="{% url 'report1' %}">
                         {% csrf_token %}
@@ -72,7 +72,7 @@
                             <option :value="item" v-for="(item,index) in list">[[item]]</option>
                         </select>
                         
-                        <input type="submit"  id="submit1" class="ui button"  style="margin-top:1vw;" value="Anlayse" disabled="disabled">
+                        <input type="submit"  id="submit1" class="ui button"  style="margin-top:1vw;font-size:18px" value="Anlayse" disabled="disabled">
                     </form>
                 </div>
             </div>
