--- a/catalog/static/css/report.css
+++ b/catalog/static/css/report.css
@@ -7,12 +7,12 @@ body {
 }*/
 @media (max-width: 1800px) {
     #typebutton{
-        left:1078px !important;
+        left:1123px !important;
     }
 }
 @media (max-width: 1600px) {
     #typebutton{
-        left:966px !important;
+        left:1018px !important;
     }
 }
 
@@ -77,17 +77,27 @@ body {
 
 @media (min-width: 1800px) {
     #parent_rightreport{
+        width:800px;
+    }
+    #parent_leftreport{
+        width:800px;
+    }
+    #typebutton{
+        left:1303px !important;
+    }
+}
+
+@media (min-width: 2000px) {
+    #parent_rightreport{
         width:850px;
     }
     #parent_leftreport{
         width:850px;
     }
     #typebutton{
-        left:1307px !important;
+        left:1459px !important;
     }
 }
-
-
 .ui.search.dropdown.selection{
     font-size:18px
 }
@@ -113,7 +123,7 @@ div > .item{
 #companyname_typebutton{
     position: relative;
     top: 30px;
-    left:35px;
+    left:23px;
 }
 
 #companyname_typebutton{
@@ -132,14 +142,14 @@ div > .item{
 
 }
 #button1{
-    font-size:18px;
+    font-size:16px;
 }
 #button2{
-    font-size:18px;
+    font-size:16px;
 }
 
 #button3{
-    font-size:18px;
+    font-size:16px;
 }
 
 
@@ -160,7 +170,7 @@ div > .item{
 
 #reportyear_curr{
     margin-bottom:25px;
-    font-size: 18px;
+    font-size: 16px;
     margin-left:13px
 }
 #itemlist_leftreport{
@@ -179,7 +189,7 @@ div > .item{
     position: relative;
     overflow-y:auto; 
     align-items:center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 40px;
     height: 700px;
     width:700px;
@@ -196,7 +206,7 @@ div > .item{
 
 #reportyear_last {
     margin-bottom: 25px;
-    font-size: 18px;
+    font-size: 16px;
     margin-left: 35px;
 }
 #itemlist_rightreport{
@@ -216,7 +226,7 @@ div > .item{
     position: relative;
     overflow-y:auto; 
     align-items:center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 40px;
     height:700px;
     width:700px;
