--- a/catalog/static/css/report.css
+++ b/catalog/static/css/report.css
@@ -16,15 +16,28 @@ body {
     }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1400px) {
+    #typebutton{
+        left:885px !important;
+    }
     #parent_rightreport{
-        width:565px;
+        width:640px !important; 
     }
     #parent_leftreport{
-        width:565px;
+        width:640px !important;
+    }
+}
+
+
+@media (max-width: 1300px) {
+    #parent_rightreport{
+        width:565px !important;
+    }
+    #parent_leftreport{
+        width:565px !important;
     }
     #typebutton{
-        left:801px !important;
+        left:785px !important;
     }
     #button1{
         font-size:14px !important;
@@ -41,13 +54,13 @@ body {
 
 @media (max-width: 1100px) {
     #parent_rightreport{
-        width:470px;
+        width:470px !important;
     }
     #parent_leftreport{
-        width:470px;
+        width:470px !important;
     }
     #typebutton{
-        left:622px !important;
+        left:600px !important;
     }
     #companyname{
         font-size:35px !important;
@@ -55,10 +68,10 @@ body {
 }
 @media (max-width: 1000px) {
     #parent_rightreport{
-        width:430px;
+        width:430px !important;
     }
     #parent_leftreport{
-        width:430px;
+        width:430px !important;
     }
     #typebutton{
         left:565px !important;
@@ -74,13 +87,23 @@ body {
         font-size:10px !important;
     }
 }
-
-@media (min-width: 1800px) {
+@media (min-width: 1600px) {
     #parent_rightreport{
-        width:800px;
+        width:780px !important;
     }
     #parent_leftreport{
-        width:800px;
+        width:780px !important;
+    }
+    #typebutton{
+        left:1186px !important;
+    }
+}
+@media (min-width: 1800px) {
+    #parent_rightreport{
+        width:800px !important;
+    }
+    #parent_leftreport{
+        width:800px !important;
     }
     #typebutton{
         left:1303px !important;
@@ -89,10 +112,10 @@ body {
 
 @media (min-width: 2000px) {
     #parent_rightreport{
-        width:850px;
+        width:850px !important;
     }
     #parent_leftreport{
-        width:850px;
+        width:850px !important;
     }
     #typebutton{
         left:1459px !important;
