--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -80,7 +80,7 @@
                             
                             <select id="itemlist" name="item" class="ui selection dropdown" style="padding: 5px 5px;">
                                 <option value="">Item</option>
-                                <option :value="item" v-for="(item,index) in list">[[item]]</option>
+                                <option :value="['Item' + item]" v-for="(item,index,key) in splitresult1">[[item]]</option>
                             </select>
                             
                             <input type="submit"  id="submit1" class="ui button"  value="Anlayse" style="font-size:18px" ></button>
@@ -289,6 +289,15 @@
                 "Item15"
             ],
             },
+            computed:{
+                splitresult1: function () {
+                    return this.list.map(function (i) {
+                        
+                        let a = i.split("Item")[1]
+                        return a
+                    })
+                }
+            }
         });
         new Vue({
             el: '#itemlist1',
