--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -72,7 +72,7 @@
                             <option :value="['Item' + item]" v-for="(item,index,key) in splitresult1">[[item]]</option>
                         </select>
                         
-                        <input type="submit"  id="submit1" class="ui button"  style="margin-top:1vw;font-size:18px" value="Anlayse" disabled="disabled">
+                        <input type="submit"  id="submit1" class="ui button"  style="margin-top:1vw;font-size:18px" value="Anlayze" disabled="disabled">
                     </form>
                 </div>
             </div>
