--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -9,8 +9,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/6.0.0/intro.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.min.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     
 
 {% load static %}
@@ -33,8 +34,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/submit.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/submit2.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/itemlist.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/intro.css' %}">
     <script src="{% static 'js_report1/create_report_report1.js' %}"></script>
     <script src="{% static 'js_report1/sentence_effect.js' %}"></script>
+    <script src="{% static 'js_report1/introduction.js' %}"></script>
     <script src="{% static 'js/sentence_color.js' %}"></script>
     <script src="{% static 'js/topselect_vue.js' %}"></script>
     <script src="{% static 'js/yearchange.js' %}"></script>
@@ -52,11 +55,22 @@
             <a href="/" id="topword" style="color:#28dd89; margin-left: 3vw;margin-top: 2vw; font-size:25px; font-weight: bold;" class="font-weight-bold">
                 FISH   
             </a>
+            
         </div>
+        <div class="row" style="flex-direction: row-reverse;margin-right: 30px;">
+            <div id="userguide">
+                <span id="ug_pic" class="material-symbols-outlined" onclick="intro()">
+                    support_agent
+                </span>
+                <div id="ug_word">user guide</div>
+            </div>
+            
+        </div>
+        
         <!--selectrow-->
         <div class="row">
             <div>
-                <div id=topselect class="row" style="margin-top:3vh;">
+                <div id=topselect class="row" >
                     <form role="form" name="myform" method="POST" enctype="multipart/form-data" action="{% url 'report1' %}">
                         {% csrf_token %}
         
@@ -204,7 +218,7 @@
                 
                 
             </form>
-            <form id="rightform" method="POST" action="{% url 'report1' %}" enctype="multipart/form-data" role="form">
+            <form data-title="qwerqwer" id="rightform" method="POST" action="{% url 'report1' %}" enctype="multipart/form-data" role="form">
                 <!--onsubmit="rightsubmit()"-->
                 {%csrf_token %}
                 <input type="hidden" id="right_year" name="year" value=''/>
@@ -234,6 +248,9 @@
 
 
     </div>
+
+    
+    
     
     <script>
 
@@ -245,6 +262,9 @@
     
     <!--itemlist, vue, so on-->
     <script>
+
+
+
         $(document).ready(function(){
             $('#topword').click(function(){
                 localStorage.clear();
