--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -37,7 +37,7 @@
                         {% csrf_token %}
                         
 
-                        
+                        <!--
                         <select id="companylist" name="company" class="ui search dropdown" style="padding: 5px 5px;">
                             <option value="">Company List</option>
                             <option :value="key" v-for="(item,key,index) in list">[[item.name]] ([[key]])</option>
@@ -56,14 +56,7 @@
                         </select>
                         
                         
-                        <!--
-                            <select id="companylist" name="company" class="ui fluid search selection dropdown" style="padding: 5px 5px;">
-                            <option value="">Company List</option>
-                            <option :value="item" v-for="(item,index) in list">[[item]]</option>
-                    
-                        </select>
-                        
-                        -->
+    
                         
                         
                         
@@ -71,6 +64,43 @@
                             <option value="">Item</option>
                             <option :value="['Item' + item]" v-for="(item,index,key) in splitresult1">[[item]]</option>
                         </select>
+                        --> 
+
+                        <div id="companylist" class="ui search selection dropdown" >
+                            <input id="companyvalue" type="hidden" name="company">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Company List</div>
+                            <div class="menu">
+                              <div class="item" :data-value="key" v-for="(item,key,index) in list">[[item.name]] ([[key]])</div>
+                              
+                              
+                            </div>
+                        </div>  
+                        <div id="yearlist" class="ui selection dropdown">
+                            <input id="yearvalue" type="hidden" name="year">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Report Year</div>
+                            <div class="menu">
+                              <div class="item" data-value="2012">2012</div>
+                              <div class="item" data-value="2013">2013</div>
+                              <div class="item" data-value="2014">2014</div>
+                              <div class="item" data-value="2015">2015</div>
+                              <div class="item" data-value="2016">2016</div>
+                              <div class="item" data-value="2017">2017</div>
+                              <div class="item" data-value="2018">2018</div>
+                              
+                            </div>
+                        </div>
+                        <div id="itemlist" class="ui selection dropdown">
+                            <input id="itemvalue" type="hidden" name="item">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Item</div>
+                            <div class="menu">
+                              <div class="item" :data-value="['Item' + item]" v-for="(item,index,key) in splitresult1">[[item]]</div>
+                              
+                            </div>
+                        </div>
+                        
                         
                         <input type="submit"  id="submit1" class="ui button"  style="margin-top:1vw;font-size:18px" value="Anlayze" disabled="disabled">
                     </form>
@@ -150,9 +180,9 @@
         })*/
         var count = 0;
         $('.ui.dropdown').change(function() {
-            let a = $("#yearlist").val();
-            let b = $("#companylist").val();
-            let c = $("#itemlist").val();
+            let a = $("#yearvalue").val();
+            let b = $("#companyvalue").val();
+            let c = $("#itemvalue").val();
             //count++;
             //console.log(a,b=="",c)
             if (a!="" && b!="" && c!="") {
@@ -164,33 +194,34 @@
 
 
 
-        $("#yearlist").change(function(){
-                saveSettings1($(this).val());
-            });
-            $("#companylist").change(function(){
-                saveSettings2($(this).val());
-                
-            });
-            $("#itemlist").change(function(){
-                saveSettings3($(this).val());
-            });
-            function saveSettings1(val) {
-                //console.log(val)
-                localStorage.setItem("yearnow",val);
-            }
-            function saveSettings2(val) {
-                //console.log(val)
-                localStorage.setItem("companynow",val);
-            }
-            function saveSettings3(val) {
-                //console.log(val)
-                localStorage.setItem("itemnow",val);
-            }
+        $("#yearvalue").change(function(){
+            saveSettings1($(this).val());
+        });
+        $("#companyvalue").change(function(){
+            saveSettings2($(this).val());
+            
+        });
+        $("#itemvalue").change(function(){
+            saveSettings3($(this).val());
+        });
+        function saveSettings1(val) {
+            //console.log(val)
+            localStorage.setItem("yearnow",val);
+        }
+        function saveSettings2(val) {
+            //console.log(val)
+            localStorage.setItem("companynow",val);
+        }
+        function saveSettings3(val) {
+            //console.log(val)
+            localStorage.setItem("itemnow",val);
+        }
     });
 </script>
 <script>
+    
     window.onload = function(){
     $('.ui.dropdown').dropdown();
     
-};
+    };
 </script>
